# ComfyUI-IF_AI_tools

./: IFBarkTTSNode.py  IFChatPromptNode.py  IFDisplayOmniNode.py  IFDisplayTextNode.py  IFDisplayTextWildcardNode.py  IFDreamTalkNode.py  IFHFDownloadNode.py  IFImagePromptNode.py  IFJoinTextNode.py  IFLoadImagesNode.py  IFLoadImagesNodeS.py  IFPromptMkrNode.py  IFSaveTextNode.py  IFStepCounterNode.py  IFTextTyperNode.py  IFVisualizeGraphNode.py  IFWhisperSpeechNode.py  IFtoolsLoadImagesNodeS.py  LICENSE  README.md  __init__.py  agent_tool.py  anthropic_api.py  colpaliRAG_module.py  embedded_install.bat  extra-requirements.txt  gemini_api.py  get_api.py  get_models.py  graphRAG_module.py  graph_visualize_tool.py  graphrag_config.yml  groq_api.py  kobold_api.py  launch_rag.py  llamacpp_api.py  lms_api.py  mistral_api.py  ollama_api.py  omost.py  (+14 more)
.github/: FUNDING.yml
.github/workflows/: publish.yml
IF_AI/: placeholder.png~
IF_AI/documents/: Safiro.txt
IF_AI/presets/: assistants.json  claim_extraction.json  community_report.json  embellishments.json  entity_extraction.json  florence_prompts.json  neg_prompts.json  profiles.json  settings.yaml  stop_strings.json  style_prompts.json  summarize_descriptions.json
IF_AI/presets/AutoCombo/: combo_settings.yaml
IF_AI/presets/agents/: omost.json
IF_AI/presets/wildcards/: Artist.yaml  (+12 more)
IF_AI/rag/: settings.yaml
dreamtalk/: configuration.json  inference_for_demo_video.py  ms_wrapper.py
dreamtalk/configs/: default.py
dreamtalk/generators/: utils.py
embellishfiles/: Award.txt  Epic.txt  Fullbodyshot.txt  Horror.txt  Portrait.txt  PortraitCloseup.txt  Product.txt  ProductMacro.txt  Simple.txt  Studio.txt  beautiful.txt
js/: ifdisplaytext_node.js  utils.js
lib_omost/: canvas.py  greedy_encode.py  utils.py
negfiles/: AnimeTI.txt  AtomeaseNoWaifus.txt  BadDream_scene.txt  BadMacho.txt  ReliberateNeg.txt  badChill.txt  badchill2.txt  neutral.txt  noTI_neg.txt  simple_negative.txt  standard.txt
presets/: assistants.json  embellishments.json  llm_stop_strings.json  neg_prompts.json  profiles.json  stop.json  style_prompts.json  summarize_descriptions.json
stylefiles/: 3DcartoonStyle.txt  Adverts.txt  Analog.txt  Anime.txt  Arquitechture.txt  CInematic.txt  FantasyArt.txt  Horror.txt  Minimalist.txt  NeonPunk.txt  Photographic.txt  RealState.txt  Renaissance.txt  Tilshift.txt  Watercolor.txt
web/js/: IFChatPromptNode.js  IFDisplayOmniNode.js  IFDisplayTextNode.js  IFDisplayTextWildcardNode.js  IFHFDownloadNode.js  IFImagePromptNode.js  IFJoinTextNode.js  IFLoadImagesNode.js  IFLoadImagesNodeS.js  IFPromptMkrNode.js  IFStepCounterNode.js  IFVisualizeGraphNode.js  IFtoolsLoadImagesNodeS.js  wildcard.json
workflows/: Fictiverse_Lyricrafter_IFAITools.json  IFAI_TOOLS_Prompts_workflow.json  IF_AI_Tools (2).json  IF_AI_Tools (5).json  IF_AI_tools.json  IF_Chat_Avatar.json  IFtools.json  WF.json  omost_tool_wf.json
(+2 files in other folders)
