[project]
name = "comfyui-if_ai_tools"
description = "A set of custom nodes to create assistant chatbots and generate prompts using a local LLMs via Ollama, LMstudio, Koboldcpp, Oobabooga or via APIs Anthropic, Groq, OpenAI"
version = "1.0.0"
license = { file = "LICENSE.txt" }
dependencies = ["Pillow", "requests", "opencv-python", "IPython", "huggingface_hub", "groq", "openai", "anthropic", "moviepy", "numpy"]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_AI_tools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "ComfyUI-IF_AI_tools"
Icon = ""
