[project]
name = "comfyui_if_ai_tools"
description = "ComfyUI-IF_AI_tools is a set of custom nodes to Run Local and API LLMs and LMMs, Features OCR-RAG (Bialdy), nanoGraphRAG, Supervision Object Detection, supports Ollama, LlamaCPP LMstudio, Koboldcpp, TextGen, Transformers or via APIs Anthropic, Groq, OpenAI, Google Gemini, Mistral, xAI and create your own charcters assistants (SystemPrompts) with custom presets and muchmore"
version = "1.0.1"
license = { file = "LICENSE.txt" } 
dependencies = ["anthropic",
"groq",
"mistralai",
"huggingface_hub",
"pypdf2",
"pdf2image",
"timm",
"sentence-transformers",
"byaldi",
"opencv-python",
"IPython",
"python-dotenv",
"nltk",
"tiktoken",
"matplotlib",
"plotly",
"kaleido",
"networkx",
"fastparquet",
"pydantic",
"rich",
"supervision",
"nano-graphrag",
"qwen-vl-utils"
]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_AI_tools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "ComfyUI_IF_AI_tools"
Icon = ""
